--- a/package.json
+++ b/package.json
@@ -50,15 +50,12 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4030620241128001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4030620241128001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4030620241128001",
-    "@vant/weapp": "^1.11.7",
-    "axios": "^1.11.0",
+    "@dcloudio/uni-ui": "^1.5.11",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "sass-embedded": "^1.92.1",
     "uni-simple-router": "2.0.7",
-    "vant": "^4.9.21",
-    "vue": "^3.4.21",
-    "vue-i18n": "^9.1.9"
+    "vue": "^3.4.21"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
