--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@dcloudio/uni-stacktracey": "3.0.0-4030620241128001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4030620241128001",
     "@types/node": "^24.3.3",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.1.3",
     "typescript": "^4.9.4",
