--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/node": "^24.3.3",
     "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.1.3",
+    "postcss-pxtransform": "^4.1.7",
     "typescript": "^4.9.4",
     "vite": "5.2.8",
     "vue-tsc": "^1.0.24"
