--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@dcloudio/uni-ui": "^1.5.11",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
+    "pinyin": "^4.0.0",
     "sass-embedded": "^1.92.1",
     "uni-simple-router": "2.0.7",
     "vue": "^3.4.21"
