优化，修复各项配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,16 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.json",
+  // 引用其他TypeScript项目配置
+  "references": [
+    {
+      // 引用应用主配置
+      "path": "./tsconfig.app.json"
+    },
+    {
+      // 引用Node环境配置
+      "path": "./tsconfig.node.json"
+    }
+  ],
+
   "compilerOptions": {
     "sourceMap": true,
     "baseUrl": ".",
