--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "uni-preset-vue",
-  "version": "0.0.0",
+  "name": "wanWan",
+  "version": "1.0.1",
   "scripts": {
     "dev:custom": "uni -p",
     "dev:h5": "uni",
@@ -55,7 +55,6 @@
     "pinia-plugin-persistedstate": "^4.5.0",
     "pinyin": "^4.0.0",
     "sass-embedded": "^1.92.1",
-    "uni-simple-router": "2.0.7",
     "vue": "^3.4.21"
   },
   "devDependencies": {
@@ -66,11 +65,10 @@
     "@dcloudio/vite-plugin-uni": "3.0.0-4030620241128001",
     "@types/node": "^24.3.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.1.3",
     "postcss-pxtransform": "^4.1.7",
-    "typescript": "^4.9.4",
+    "typescript": "^5.9.3",
     "vite": "5.2.8",
-    "vue-tsc": "^1.0.24"
+    "vue-tsc": "^3.2.1"
   }
 }
