--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "lib": ["esnext", "dom"],
     "types": ["@dcloudio/types", "node"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/main.js"]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/main.ts"]
 }
