--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wanWan",
+  "name": "wanWanApp",
   "version": "1.0.1",
   "scripts": {
     "dev:custom": "uni -p",
@@ -51,11 +51,12 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-4030620241128001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4030620241128001",
     "@dcloudio/uni-ui": "^1.5.11",
-    "pinia": "^3.0.3",
-    "pinia-plugin-persistedstate": "^4.5.0",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "pinyin": "^4.0.0",
     "sass-embedded": "^1.92.1",
-    "vue": "^3.4.21"
+    "vconsole": "^3.15.1",
+    "vue": "3.4.21"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
