--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "jsxImportSource": "vue", // 导入Vue的JSX模块
     "esModuleInterop": true, // 启用ES模块互操作性
     "resolveJsonModule": true, // 解析JSON模块，可import JSON文件
+    "downlevelIteration": true, // 降级迭代器，支持旧版浏览器
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
