环境变量使用；样式区分 APP H5

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VUE_APP_PLATFORM='h5'
 
-VITE_API_BASE_URL='http://localhost:3001/api'
+VITE_DEV_BASE_URL='http://192.168.36.37:3001'
+
+VITE_PROD_BASE_URL='http://8.155.51.40:3001'
