--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-4030620241128001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4030620241128001",
     "@dcloudio/uni-ui": "^1.5.11",
-    "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^3.2.1",
+    "pinia": "2.1.7",
+    "pinia-plugin-persistedstate": "3.2.1",
     "pinyin": "^4.0.0",
     "sass-embedded": "^1.92.1",
     "vconsole": "^3.15.1",
